# zed-ros2-wrapper

rviz-plugin-zed-od/: CMakeLists.txt  package.xml  plugin_description.xml
rviz-plugin-zed-od/src/plugin/include/: zed_od_display.hpp  zed_od_info.hpp
rviz-plugin-zed-od/src/plugin/src/: zed_od_display.cpp  zed_od_info.cpp
zed_components/: CMakeLists.txt
zed_components/src/tools/include/: sl_tools.h
zed_components/src/tools/src/: sl_tools.cpp
zed_components/src/yolo_detector/include/: yolo_detector.hpp
zed_components/src/yolo_detector/src/: yolo_detector.cpp
zed_components/src/zed_camera/include/: zed_camera_component.hpp
zed_components/src/zed_camera/src/: zed_camera_component.cpp
zed_wrapper/: CMakeLists.txt
zed_wrapper/launch/include/: zed_camera.launch.py
